--- a/NorthWind/NorthWind.Infrastructure/NorthWind.Infrastructure.csproj
+++ b/NorthWind/NorthWind.Infrastructure/NorthWind.Infrastructure.csproj
@@ -5,4 +5,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Core\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
