--- a/NorthWind/NorthWind.Infrastructure/NorthWind.Infrastructure.csproj
+++ b/NorthWind/NorthWind.Infrastructure/NorthWind.Infrastructure.csproj
@@ -6,18 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Context\" />
     <Folder Include="Core\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Interfaces\" />
     <Folder Include="Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NorthWind.Domain\NorthWind.Domain.csproj" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
