--- a/NorthWind/NorthWind.Api/NorthWind.Api.csproj
+++ b/NorthWind/NorthWind.Api/NorthWind.Api.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NorthWind.Application\NorthWind.Application.csproj" />
     <ProjectReference Include="..\NorthWind.Infrastructure\NorthWind.Infrastructure.csproj" />
   </ItemGroup>
 
