Trabajo de Programación Implementacion de la capa de servicio Parte II

--- a/NorthWind/NorthWind.Web/NorthWind.Web.csproj
+++ b/NorthWind/NorthWind.Web/NorthWind.Web.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\NorthWind.Ioc\NorthWind.Ioc.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Request\" />
+  </ItemGroup>
+
 </Project>
